@@ -11,15 +11,19 @@ DIST pciutils-3.3.1.tar.gz 393912 SHA256 02beeb14503707c5a3293fe084c18e12e6937c0
 EBUILD pciutils-3.2.0.ebuild 2353 SHA256 1ac7212f396e6c218569cda57684f3248d871742ddcdc0eda9c29c82f211721b SHA512 c1c6960087a88a218ce110b88f3a8345eb76ef9b5fbc438e45f070b2d91724588b0644ad28454accc4b306ebcffb5293ba81063424a42ee62580393f2c2eab05 WHIRLPOOL d69c484efa630c65b6e1aa0a3438ec908145d8d87bf499fd81b603506cac0640e65e1b033350b37935b273c9a5cd9eefb6699b08cbfd9828db3ba77497670c8c
 EBUILD pciutils-3.2.1.ebuild 2373 SHA256 a0e93da5617f00df6f2f3f90c80fc3c35ae585b118098b2d6ebe80922b0f8638 SHA512 a13853ae95a2ba0c7914eac16b2c28270bf9f23050d3c418224334f3910ae9f131b673dc033ac9718fbcec0955325ade03675d07d85097d5b7f64e1e6d51f0eb WHIRLPOOL 5d6d90fe665a69afb4f7c677357d9ea589b56931eae247314e220efe3d45877d7165053345c9b7e1f1850f11507cadd3afaf668987d99b8ffa426da6fe710425
 EBUILD pciutils-3.3.0-r2.ebuild 3024 SHA256 2eb91234d6e3abf1d05fc7c09ec9235c796f8da95744af21ac2e83374d4d60d0 SHA512 5a3aa5b7f604a924227d38c3bc2e766fa7cf9fe9f891bba1802594234471708716129a3ec5ae4a4e29758d7bb5f50a1ef36680d84d502d54b70a4cdffc60ca3d WHIRLPOOL 6b96eaab93b0ff700a0efcfc418b0cb0526c2be29dd281c272ea7f3a4c48797edb155fb4defa963d1e5331259f4ba2f9dcca355c6c435df577ebd3a474425718
-EBUILD pciutils-3.3.1.ebuild 3018 SHA256 a909202cf3d472489414952b7c00a638dc8df8c0b5d7d928d09ce5100acb88d6 SHA512 1de9ea5e954d5b551c4b5c20216b779d1ba670baf2430a6debd3f9025b8d5bfa4b76c3a5d98d9644871aade18c6515ab36263ab0f04be718150abecce127920a WHIRLPOOL 8c1886f72f763e679e1896b893ebc8cd9e1199adbe1ece9ce3168bb1d80b0172117e3ff4f9020c770a8cee8e0f44bd68eeb3040d0535741c7785fac74ba89686
-MISC ChangeLog 31391 SHA256 bf279099f79fe51cb15d44bf5b2ebf23ae3c32bee44da92a06968d29926bd9e2 SHA512 598da0f6b14ec69171f94bad578efd21b8da625865f8671fe5db5e13c317039e5c3128cd17d9c02f61bce6a2befdcf8a75fe10cc6db4108f30ac2f9fe4db2a59 WHIRLPOOL 7942070665f2268787c4bfeae94f6e24b031992a0ee24f148130d05cf8dccc95e54ab8e26269f0e2b6ff4c7d95c3ae2ef58ba109e50ba0bdbb5d2527f0fe5b31
+EBUILD pciutils-3.3.1.ebuild 3018 SHA256 e405654d3025504fee8a9218078c7a8a771eb4ac93fca66822d45a50a0237cfa SHA512 0c42d10db0591fcd762ab9888d4a43ea96dc7cad5f5fcdbad91673e030f8565d472377b085f57a2d09a91bddeb861f0db7368a7eab94db31b79454e717594cfc WHIRLPOOL c8d70a24591afa7b26ae9130a852bcda0b917cad34f3977da7c3e4e811646fcbfc05e81fa4cfb10e4de162895c6a653299cbd16a17f3be758be2d4f58816270b
+MISC ChangeLog 31500 SHA256 64e8281eb7979554390ef6c4c323f8d65f4da9a76bdc071d072f78d2c4a67ad6 SHA512 5baa5b45155b0df008de51298fdb54fda6d71b179a148bc799aa4f15a18c7d9de48240354826223fb7bcb1a4b44289dd72252a29204618dd54ddc336fcf245ec WHIRLPOOL 040a27595fe695d2bc4edd48697121b52d05abc302c6a1877e880a777d9a0417fd02cd324ca47b38ec38551296923f1bf157a6cf35fc2a0988d416031c208a45
 MISC metadata.xml 441 SHA256 3b59e464a347f70ba8253b0dfe68d2782bedcce66d6463cb70ca8d726b51ff7a SHA512 11928700ad20848f7218d6206b65619005d4c9552b0ae65f66ae7d3c21539b2fca664ea46e6d2f47553e3de6e25a5d89e4c9d4eb41fea358016e1549472934e0 WHIRLPOOL 6b8388c472839846d0bf04b8329e71f1acf787c465ff60e1d7abb7717fe717f1cff14e495ec9b6b9de6169b71a7546b22519cd38bcc8472f7090c7a996d2d7ec
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iJwEAQEIAAYFAlXDsqkACgkQG9wOWsQutdbTrQP/QS6tWuRSPpGQ/cLpB77RUYH4
-1xiSGsfEeN8/32sLjxhIYjq3NkZblWO9D3FO4QI0UE8GY+evyDJgQA9emG4RSTYm
-1kHdYwG8ILILFCYTDd1Pe8XmtKfIKhYAdvztScP/Kmawi1nlKf0Lz/JWf0rXsZDt
-qce11JpC13mIglvqzoQ=
-=KMqu
+iQF8BAEBCABmBQJVxG9dXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFQ0MxMDlFRTJGQzJGRUFENTYzQjg4OUJG
+RjEwQ0RDNjIwNjc1NDc4AAoJEP8QzcYgZ1R4a+oH/jDnXWl4FfPcM/YaftI05ZJ1
+/elSvW203g+BLBJHr1WIemSEv1c7wZl3Llg4XQsPhspEANMDr/gxxuD7fh1RRQA/
+vYB7uFeTgPBKy6hKDcT5toLF8buxXmSDPZ27stimtLagIBjzNbRwNet9gFSKOco/
+uAwsGGxFtccEgNxGVSFftrhrXfDGT/lBe5p5nMe/rOX+r0iKee+fYH3zFUuRN++u
+lY8q1UxKnBfia1qCEQzjl3Ah2wjHSdiw/+4lC7WiRSCaJRMDjUNmsp8g71BaUSHP
+rv/+2Do/gHdn4iKxCq/GPbjJy8NrcXm7L5JytQDE5O+5n5dr0yttZYCdpv/6u/A=
+=7UxC
 -----END PGP SIGNATURE-----
